--- a/MY/01/index.html
+++ b/MY/01/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="zh">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="descripition" content="DesafioCSS">
-  <meta name="author" content="Milena Carecho">
-  <meta name="keywords" content="CSS">
-  <title>Ícone de mídia social em camadas </title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>分层图标</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
@@ -21,7 +18,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fa fa-facebook" aria-hidden="true"></span>
+        <span class="fa fa-qq"></span>
       </a>
     </li>
     <li>
@@ -30,7 +27,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fa fa-twitter" aria-hidden="true"></span>
+        <span class="fa fa-github"></span>
       </a>
     </li>
     <li>
@@ -39,7 +36,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fa fa-google-plus" aria-hidden="true"></span>
+        <span class="fa fa-steam"></span>
       </a>
     </li>
     <li>
@@ -48,7 +45,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fa fa-linkedin" aria-hidden="true"></span>
+        <span class="fa fa-twitter"></span>
       </a>
     </li>
     <li>
@@ -57,11 +54,10 @@
         <span></span>
         <span></span>
         <span></span>
-        <span class="fa fa-instagram" aria-hidden="true"></span>
+        <span class="fa fa-envelope"></span>
       </a>
     </li>
   </ul>
-
 </body>
 
 </html>
