--- a/MY/30/index.html
+++ b/MY/30/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>滚动的球</title>
+  <title>烟花</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
